[package]
name = "serde_rison"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", default-features = false }
itoa = "1.0"
ryu = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
maplit = "1.0"
ordered-float = { version = "3.6", features = ["serde"] }

[features]
default = ["std"]

std = ["serde/std"]
